--- a/src/stories/Molecules/Hero/Hero.css
+++ b/src/stories/Molecules/Hero/Hero.css
@@ -160,7 +160,7 @@
 }
 
 .hero--mega .hero__content-inner {
-  max-width: 70ch;
+  max-width: 78ch;
 }
 
 .hero--mega .card h1 {
